fix password field color on IOS trial 1

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,16 @@
 @tailwind utilities;
 
 @layer base {
-  html, body {
-    @apply bg-black
+  html,
+  body {
+    @apply bg-black;
+  }
+  input:disabled,
+  textarea:disabled,
+  input:disabled::placeholder,
+  textarea:disabled::placeholder {
+    -webkit-text-fill-color: currentcolor; /* 1. sets text fill to current `color` for safari */
+    opacity: 1; /* 2. correct opacity on iOS */
   }
 }
 
@@ -24,7 +32,6 @@ body {
   line-height: 1;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
 }
 
 a {
